Bug 377284 - krunner katesessions plugin not ported to Plasma5
Summary: krunner katesessions plugin not ported to Plasma5
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: 5.9.3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-06 11:45 UTC by Marian Kyral
Modified: 2017-03-17 11:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marian Kyral 2017-03-06 11:45:01 UTC
The kate session pluggin for krunner is missing on Plasma5. It looks like it was not ported yet. Are there any plans, when it will be ported? 

I just switched to Plasma5 and this is one think I used on KDE4 and miss it in latest Plasma.

Thanks.
Comment 1 Kai Uwe Broulik 2017-03-17 10:36:54 UTC
There you go https://phabricator.kde.org/D5077 :)
Comment 2 Kai Uwe Broulik 2017-03-17 11:14:09 UTC
Git commit 412f19df9cbb80b2f2b10cea8948bbe6885c45b0 by Kai Uwe Broulik.
Committed on 17/03/2017 at 11:13.
Pushed by broulik into branch 'master'.

Port Kate Sessions Runner

This brings back the ability to find and launch Kate sessions through KRunner, e.g. "kate foo" will show the "foo" Kate session if there is one.
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5077

M  +1    -1    runners/CMakeLists.txt
M  +6    -6    runners/katesessions/CMakeLists.txt
M  +36   -40   runners/katesessions/katesessions.cpp
M  +5    -5    runners/katesessions/katesessions.h
R  +1    -1    runners/katesessions/plasma-runner-katesessions.desktop [from: runners/katesessions/katesessions.desktop - 099% similarity]

https://commits.kde.org/kdeplasma-addons/412f19df9cbb80b2f2b10cea8948bbe6885c45b0