Port Kate Sessions Runner

This brings back the ability to find and launch Kate sessions through KRunner, e.g. "kate foo" will show the "foo" Kate session if there is one.

BUG: 377284
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5077